--- a/index.html
+++ b/index.html
@@ -70,8 +70,11 @@
     metrics: {
       "user_id": 34
     },
+    dashas: {
+      swf: './dashas.swf'
+    },
     chromecast: {},
-    techOrder: ["dash", "html5"]
+    techOrder: ["dashas", "dash", "html5"]
   }).ready(function () {
     var player = this;
 
