hide tracks button if < 2

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <script src="/node_modules/smoothie/smoothie.js"></script>
 <script src="/dist/afrostream-player.js"></script>
 <!-- chromecast sdk -->
-<script src="http://www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
+<script src="//www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
 <script>
 
   var player = videojs(document.querySelector('video'), {
