--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html>
+<!doctype html >
+<html data-cast-api-enabled="true">
 <head>
   <meta charset="utf-8">
   <title>Afrostream player based on videojs Demo</title>
@@ -20,17 +20,23 @@
       margin: 10px;
     }
   </style>
+  <!-- chromecast sdk -->
+  <script async src="//www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
 </head>
 <body>
-<video class="video-js vjs-afrostream-skin" controls width="640px" height="360px">
+<video class="video-js vjs-afrostream-skin" controls width="640px" height="360px"
+       poster="http://content.bitsontherun.com/thumbs/3XnJSIm4-480.jpg">
   <!--<source-->
   <!--src="http://dash.edgesuite.net/akamai/test/caption_test/ElephantsDream/elephants_dream_480p_heaac5_1.mpd"-->
   <!--type="application/dash+xml"/>-->
   <!--<source src="https://hw.cdn.afrostream.net/live/bet.isml/bet.mpd"-->
   <!--type="application/dash+xml"/>-->
   <source
-    src="https://hw.cdn.afrostream.net/vod/WILDWILDWEST_FILMLM_16020931/3d14bbf03db5f0b5.ism/3d14bbf03db5f0b5.mpd"
+    src="http://dash.edgesuite.net/digitalprimates/fraunhofer/480p_video/mps_5_1_with_video/Sintel/sintel_480p_mps5_1.mpd"
     type="application/dash+xml"/>
+  <!--<source-->
+  <!--src="https://hw.cdn.afrostream.net/vod/WILDWILDWEST_FILMLM_16020931/3d14bbf03db5f0b5.ism/3d14bbf03db5f0b5.mpd"-->
+  <!--type="application/dash+xml"/>-->
   <track kind="captions" src="./node_modules/video.js/dist/examples/shared/example-captions.vtt" srclang="fr"
          label="Francais" default/>
   <!--Tracks need an ending tag thanks to IE9-->
@@ -48,14 +54,12 @@
   <li><a href="/test/">Run unit tests in browser.</a></li>
 </ul>
 <!--<script src="/node_modules/video.js/dist/video.js"></script>-->
-<script src="//code.jquery.com/jquery-2.1.4.js"></script>
 <script src="/lib/video.js"></script>
 <script> window.dashjs = {skipAutoCreate: true}; </script>
 <script src="/node_modules/dashjs/dist/dash.all.debug.js"></script>
 <script src="/node_modules/smoothie/smoothie.js"></script>
 <script src="/dist/afrostream-player.js"></script>
-<!-- chromecast sdk -->
-<script src="//www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
+<script src="//code.jquery.com/jquery-2.1.4.js"></script>
 <script>
 
   var player = videojs(document.querySelector('video'), {
