--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <li><a href="/test/">Run unit tests in browser.</a></li>
 </ul>
 <!--<script src="/node_modules/video.js/dist/video.js"></script>-->
-<script src="/lib/video.js"></script>
+<script src="/libs/video.js"></script>
 <script> window.dashjs = {skipAutoCreate: true}; </script>
 <script src="/node_modules/dashjs/dist/dash.all.debug.js"></script>
 <script src="/node_modules/smoothie/smoothie.js"></script>
