get thumbnail map from currentSrc

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     autoplay: true,
     sources: [
       {
-        src: "https://hw.cdn.afrostream.net/vod/tylerperry_fbow_s01ep01/45f6eb0ff24ab110.ism/45f6eb0ff24ab110.mpd",
+        src: "https://origin.cdn.afrostream.net/vod/24hourlovebis/d4eed726882a4be3.ism/d4eed726882a4be3.mpd",
         type: "application/dash+xml"
       }
     ],
