--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
       {
         src: "https://origin.cdn.afrostream.net/vod/24hourlovebis/d4eed726882a4be3.ism/d4eed726882a4be3.mpd",
         type: "application/dash+xml"
+      },
+      {
+        src: "https://origin.cdn.afrostream.net/vod/24hourlovebis/d4eed726882a4be3.ism/master.m3u8",
+        type: "application/vnd.apple.mpegurl"
       }
     ],
 //    aspectRatio: "640:167",
