hide thumbs on error

--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
   var player = videojs(document.querySelector('video'), {
     autoplay: true,
     sources: [
-//      {
-//        src: "https://origin.cdn.afrostream.net/vod/HANCOCK_240_25_ProRes422_FRA_ENG_HD_STEREO/b10bbcc21f1b8988.ism/b10bbcc21f1b8988.mpd",
-//        type: "application/dash+xml"
-//      },
+      {
+        src: "https://origin.cdn.afrostream.net/vod/HANCOCK_240_25_ProRes422_FRA_ENG_HD_STEREO/b10bbcc21f1b8988.ism/b10bbcc21f1b8988.mpd",
+        type: "application/dash+xml"
+      },
 //      {
 //        src: "https://origin.cdn.afrostream.net/vod/HANCOCK_240_25_ProRes422_FRA_ENG_HD_STEREO/b10bbcc21f1b8988.ism/master.m3u8",
 //        type: "application/vnd.apple.mpegurl"
 //      },
       {
-        src: "https://origin.cdn.afrostream.net/vod/24hourlovebis/d4eed726882a4be3.ism/master.m3u8",
-        type: "application/vnd.apple.mpegurl"
-      },
-      {
         src: "https://hw.cdn.afrostream.net/vod/24hourlovebis/d4eed726882a4be3.ism/d4eed726882a4be3.mpd",
         type: "application/dash+xml"
+      },
+      {
+        src: "https://origin.cdn.afrostream.net/vod/24hourlovebis/d4eed726882a4be3.ism/master.m3u8",
+        type: "application/vnd.apple.mpegurl"
       }
     ],
 //    aspectRatio: "640:167",
