add native tracks

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <script async src="//www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
 </head>
 <body>
-<video class="video-js vjs-afrostream-skin" controls width="640px" height="360px"
+<video class="video-js vjs-afrostream-skin" controls width="640px" height="360px" crossorigin="true"
        poster="http://content.bitsontherun.com/thumbs/3XnJSIm4-480.jpg">
   <!--<source-->
   <!--src="http://dash.edgesuite.net/akamai/test/caption_test/ElephantsDream/elephants_dream_480p_heaac5_1.mpd"-->
@@ -39,7 +39,7 @@
   <!--type="application/dash+xml"/>-->
   <!--<track kind="captions" src="./node_modules/video.js/dist/examples/shared/example-captions.vtt" srclang="fr"-->
   <!--label="Francais" default/>-->
-  <!--&lt;!&ndash;Tracks need an ending tag thanks to IE9&ndash;&gt;-->
+  <!--Tracks need an ending tag thanks to IE9-->
   <!--<track kind="captions" src="./node_modules/video.js/dist/examples/shared/example-captions.vtt" srclang="en"-->
   <!--label="English"/>-->
   <!--<source-->
@@ -65,10 +65,10 @@
   var player = videojs(document.querySelector('video'), {
     autoplay: true,
     sources: [
-      {
-        src: "https://origin.cdn.afrostream.net/vod/HANCOCK_240_25_ProRes422_FRA_ENG_HD_STEREO/b10bbcc21f1b8988.ism/b10bbcc21f1b8988.mpd",
-        type: "application/dash+xml"
-      },
+//      {
+//        src: "https://origin.cdn.afrostream.net/vod/HANCOCK_240_25_ProRes422_FRA_ENG_HD_STEREO/b10bbcc21f1b8988.ism/b10bbcc21f1b8988.mpd",
+//        type: "application/dash+xml"
+//      },
 //      {
 //        src: "https://origin.cdn.afrostream.net/vod/HANCOCK_240_25_ProRes422_FRA_ENG_HD_STEREO/b10bbcc21f1b8988.ism/master.m3u8",
 //        type: "application/vnd.apple.mpegurl"
@@ -97,6 +97,10 @@
     },
     dashas: {
       swf: './dashas.swf'
+    },
+    html5: {
+      nativeCaptions: false,
+      nativeTextTracks: false
     },
     chromecast: {},
     techOrder: ["dash", "html5", "dashas"]
