--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <script>
 
   var player = videojs(document.querySelector('video'), {
-    autoplay: true,
+    autoplay: false,
     sources: [
 //      {
 //        src: "https://origin.cdn.afrostream.net/vod/HANCOCK_240_25_ProRes422_FRA_ENG_HD_STEREO/b10bbcc21f1b8988.ism/b10bbcc21f1b8988.mpd",
