--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
         integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
   <link href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/6.1.5/css/bootstrap-slider.css" rel="stylesheet">
   <style>
-
-
+    .table > tbody > tr > td {
+      padding: 0;
+      line-height: 1;
+      border: none;
+    }
   </style>
   <!-- chromecast sdk -->
   <script async src="//www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
@@ -23,55 +26,55 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/6.1.5/bootstrap-slider.js"></script>
 </head>
 <body>
-<table>
-  <tr>
-    <td id="video-container">
-      <!--<video class="video-js vjs-afrostream-skin" controls crossorigin="true"-->
-      <!--poster="http://content.bitsontherun.com/thumbs/3XnJSIm4-480.jpg">-->
-      <!--<source-->
-      <!--src="http://dash.edgesuite.net/akamai/test/caption_test/ElephantsDream/elephants_dream_480p_heaac5_1.mpd"-->
-      <!--type="application/dash+xml"/>-->
-      <!--<source src="https://hw.cdn.afrostream.net/live/bet.isml/bet.mpd"-->
-      <!--type="application/dash+xml"/>-->
-      <!--<source-->
-      <!--src="http://dash.edgesuite.net/digitalprimates/fraunhofer/480p_video/mps_5_1_with_video/Sintel/sintel_480p_mps5_1.mpd"-->
-      <!--type="application/dash+xml"/>-->
-      <!--<source-->
-      <!--src="https://hw.cdn.afrostream.net/vod/WILDWILDWEST_FILMLM_16020931/3d14bbf03db5f0b5.ism/3d14bbf03db5f0b5.mpd"-->
-      <!--type="application/dash+xml"/>-->
-      <!--<track kind="captions" src="./node_modules/video.js/dist/examples/shared/example-captions.vtt" srclang="fr"-->
-      <!--label="Francais" default/>-->
-      <!--Tracks need an ending tag thanks to IE9-->
-      <!--<track kind="captions" src="./node_modules/video.js/dist/examples/shared/example-captions.vtt" srclang="en"-->
-      <!--label="English"/>-->
-      <!--<source-->
-      <!--src="https://bitdash-a.akamaihd.net/content/sintel/hls/playlist.m3u8"-->
-      <!--type="application/x-mpegURL"/>-->
-      <!--</video>-->
-    </td>
-    <td>
-      <div id="graphWrapper" class="row">
-        <canvas id="_chartBitrate" width="640" height="160"></canvas>
-        <canvas id="_chartBuffer" width="640" height="160"></canvas>
-      </div>
-    </td>
-  </tr>
-  <tr>
-    <td id="slider-container">
-    </td>
-    <td>
-      Seconds behind live: <span id="video_delay"></span><br/>
-      Buffer length: <span id="video_buffer"></span><br/>
-      Wall clock time
-      <div class="clock">
-        <span id="min"> </span>:<span id="sec"></span>
-      </div>
-      <ul>
-        <li><a href="/test/">Run unit tests in browser.</a></li>
-      </ul>
-    </td>
-  </tr>
-</table>
+<div class="table-responsive">
+  <table class="table">
+    <tr>
+      <td id="video-container">
+        <!--<video class="video-js vjs-afrostream-skin" controls crossorigin="true"-->
+        <!--poster="http://content.bitsontherun.com/thumbs/3XnJSIm4-480.jpg">-->
+        <!--<source-->
+        <!--src="http://dash.edgesuite.net/akamai/test/caption_test/ElephantsDream/elephants_dream_480p_heaac5_1.mpd"-->
+        <!--type="application/dash+xml"/>-->
+        <!--<source src="https://hw.cdn.afrostream.net/live/bet.isml/bet.mpd"-->
+        <!--type="application/dash+xml"/>-->
+        <!--<source-->
+        <!--src="http://dash.edgesuite.net/digitalprimates/fraunhofer/480p_video/mps_5_1_with_video/Sintel/sintel_480p_mps5_1.mpd"-->
+        <!--type="application/dash+xml"/>-->
+        <!--<source-->
+        <!--src="https://hw.cdn.afrostream.net/vod/WILDWILDWEST_FILMLM_16020931/3d14bbf03db5f0b5.ism/3d14bbf03db5f0b5.mpd"-->
+        <!--type="application/dash+xml"/>-->
+        <!--<track kind="captions" src="./node_modules/video.js/dist/examples/shared/example-captions.vtt" srclang="fr"-->
+        <!--label="Francais" default/>-->
+        <!--Tracks need an ending tag thanks to IE9-->
+        <!--<track kind="captions" src="./node_modules/video.js/dist/examples/shared/example-captions.vtt" srclang="en"-->
+        <!--label="English"/>-->
+        <!--<source-->
+        <!--src="https://bitdash-a.akamaihd.net/content/sintel/hls/playlist.m3u8"-->
+        <!--type="application/x-mpegURL"/>-->
+        <!--</video>-->
+      </td>
+      <td>
+        <canvas id="_chartBitrate"></canvas>
+        <canvas id="_chartBuffer"></canvas>
+      </td>
+    </tr>
+    <tr>
+      <td id="slider-container">
+      </td>
+      <td>
+        Seconds behind live: <span id="video_delay"></span><br/>
+        Buffer length: <span id="video_buffer"></span><br/>
+        Wall clock time
+        <div class="clock">
+          <span id="min"> </span>:<span id="sec"></span>
+        </div>
+        <ul>
+          <li><a href="/test/">Run unit tests in browser.</a></li>
+        </ul>
+      </td>
+    </tr>
+  </table>
+</div>
 <!--<script src="/node_modules/video.js/dist/video.js"></script>-->
 <script src="/libs/video.js"></script>
 <script> window.dashjs = {skipAutoCreate: true}; </script>
@@ -241,7 +244,7 @@
     [
       //LIVE BET
       {
-        src: "https://origin.cdn.afrostream.net/live/bet.isml/bet.mpd",
+        src: "https://origin.cdn.afrostream.net/live/betdev.isml/bet.mpd",
         type: "application/dash+xml"
       }
       //EXTERNAL SIMPLE
@@ -348,7 +351,7 @@
   var options = {
     controls: true,
     autoplay: true,
-    width: 600,
+    width: window.innerWidth * 0.5,
     height: 300,
     sources: sources,
     controlBar: {
