remove options() deprecated methods

--- a/index.html
+++ b/index.html
@@ -374,14 +374,10 @@
     dashas: {
       swf: './dashas.swf'
     },
-    dash: {
-      nativeCaptions: true,
-      nativeTextTracks: false
-    },
-    html5: {
-      nativeCaptions: false,
-      nativeTextTracks: false
-    },
+//    html5: {
+//      nativeCaptions: false,
+//      nativeTextTracks: false
+//    },
     chromecast: {},
     techOrder: ["dash", "html5", "dashas"]
   };
