caption for edge

--- a/index.html
+++ b/index.html
@@ -374,10 +374,10 @@
     dashas: {
       swf: './dashas.swf'
     },
-//    html5: {
-//      nativeCaptions: false,
-//      nativeTextTracks: false
-//    },
+    dash: {
+      nativeCaptions: false,
+      nativeTextTracks: false
+    },
     chromecast: {},
     techOrder: techOrder
   };
