--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   <script async src="//www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
   <!-- external libs -->
   <script src="//code.jquery.com/jquery-2.1.4.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/6.1.5/bootstrap-slider.js"></script>
-  <link href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/6.1.5/css/bootstrap-slider.css" rel="stylesheet">
-  <script src="//www.bootstrap-switch.org/dist/js/bootstrap-switch.js"></script>
-  <link href="//www.bootstrap-switch.org/dist/css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
+  <script src="/node_modules/bootstrap-slider/dist/bootstrap-slider.js"></script>
+  <link href="/node_modules/bootstrap-slider/dist/css/bootstrap-slider.css" rel="stylesheet">
+  <script src="/node_modules/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
+  <link href="/node_modules/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
 </head>
 <body>
 <div class="row">
