fix cdn image host

--- a/index.html
+++ b/index.html
@@ -452,6 +452,11 @@
       nextVideoButton: {
         title: 'Dummy episode 2',
         poster: 'http://fakeimg.pl/150'
+      },
+      progressControl:{
+        mouseThumbnailDisplay:{
+          host:'toto.com'
+        }
       }
     },
     metrics: {
