next button: adjust sizes

--- a/index.html
+++ b/index.html
@@ -452,6 +452,13 @@
       nextVideoButton: {
         title: 'Dummy episode 2',
         poster: 'http://fakeimg.pl/150'
+      },
+      "progressControl": {
+        "seekBar": {
+          "mouseThumbnailDisplay": {
+            "host": "hw.cdn.afrostream.net"
+          }
+        }
       }
     },
     metrics: {
