switch lower bitrate on seek

--- a/index.html
+++ b/index.html
@@ -502,12 +502,12 @@
   });
 
   smoothieBitrate.addTimeSeries(videoSerie, {
-    strokeStyle: '#F62459',
+    strokeStyle: '#0d8ea9',
     lineWidth: 1
   });
 
   smoothieBitrate.addTimeSeries(p2pSerie, {
-    strokeStyle: '#0000FF',
+    strokeStyle: '#d612c4',
     lineWidth: 1
   });
 
